--- a/account/templates/messaging.html
+++ b/account/templates/messaging.html
@@ -102,9 +102,6 @@ Header START -->
 
 			<!-- Main navbar START -->
 			<div class="collapse navbar-collapse" id="navbarCollapse">
-
-
-
 				<ul class="navbar-nav navbar-nav-scroll ms-auto">
 					<!-- Nav item 1 Demos -->
 			
@@ -112,18 +109,12 @@ Header START -->
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sayfalar</a>
 						<ul class="dropdown-menu" aria-labelledby="pagesMenu">
-							<li> <a class="dropdown-item" href="profil">Profil</a></li>
+							<li> <a class="dropdown-item" href="/profil">Profil</a></li>
 							<li> <a class="dropdown-item" href="#">Destek ve iletişim</a></li>
-              
-							<!-- Dropdown submenu levels -->
-
-							
 						</ul>
 					</li>
 
 					<!-- Nav item 3 Post -->
-					
-
 					<!-- Nav item 4 Mega menu -->
 					<li class="nav-item">
 						<a class="nav-link" href='/home'>Ana sayfa</a>
@@ -144,7 +135,6 @@ Header START -->
 						<i class="bi bi-gear-fill fs-6"> </i>
 					</a>
 				</li>
-   
         <!-- Notification dropdown END -->
 
         <li class="nav-item ms-2 dropdown">
@@ -161,7 +151,7 @@ Header START -->
                 </div>
                 <div>
                   <a class="h6 stretched-link" href="#">user.username</a>
-                  <p class="small m-0">Web Developer</p>
+                  
                 </div>
               </div>
               <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="/profil">Profilini görüntüle </a>
@@ -179,12 +169,12 @@ Header START -->
               </a> 
             </li>
             <li class="dropdown-divider"></li>
-            <li><a class="dropdown-item bg-danger-soft-hover" href="sign-in-advance.html"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
+            <li><a class="dropdown-item bg-danger-soft-hover" href="/loguot"><i class="bi bi-power fa-fw me-2"></i>Çıkış yap</a></li>
             <li> <hr class="dropdown-divider"></li>
             <!-- Dark mode options START -->
 						<li>
 							<div class="modeswitch-item theme-icon-active d-flex justify-content-center gap-3 align-items-center p-2 pb-0">
-								<span>Mode:</span>
+								<span>Mod:</span>
 								<button type="button" class="btn btn-modeswitch nav-link text-primary-hover mb-0" data-bs-theme-value="light" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Light">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun fa-fw mode-switch" viewBox="0 0 16 16">
 										<path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
@@ -210,7 +200,6 @@ Header START -->
           </ul>
 				</li>
 			  <!-- Profile START -->
-        
 			</ul>
 			<!-- Nav right END -->
 		</div>
@@ -239,7 +228,7 @@ Header END -->
 				<!-- Advanced filter responsive toggler END -->
         <div class="card card-body border-end-0 border-bottom-0 rounded-bottom-0">
           <div class=" d-flex justify-content-between align-items-center">
-            <h1 class="h5 mb-0">Active chats <span class="badge bg-success bg-opacity-10 text-success">6</span></h1>
+            <h1 class="h5 mb-0">Aktif mesajlar <span class="badge bg-success bg-opacity-10 text-success">6</span></h1>
             <!-- Chat new create message item START -->
             <div class="dropend position-relative">
               <div class="nav">
