--- a/account/templates/user-profile.html
+++ b/account/templates/user-profile.html
@@ -258,7 +258,7 @@ Header END -->
                   <!-- Nav profile pages -->
                   <ul class="nav nav-bottom-line align-items-center justify-content-center justify-content-md-start mb-0 border-0">
                       <li class="nav-item"> <a class="nav-link active" href="my-profile.html"> Gönderileri </a> </li>
-                      <li class="nav-item"> <a class="nav-link" href="my-profile-about.html"> Hakkımda </a> </li>
+                      <li class="nav-item"> <a class="nav-link" href="my-profile-about.html"> Başarılı Bağışlarım </a> </li>
                   </ul>
               </div>
           </div>
