--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -4,12 +4,11 @@
 	
 <!-- Mirrored from social.webestica.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 May 2024 09:27:58 GMT -->
 <head>
-	<title>Social - Network, Community and Event Theme</title>
+	<title>Bagıs yuvası</title>
 
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="author" content="Webestica.com">
 	<meta name="description" content="Bootstrap 5 based Social Media Network and Community Theme">
 
 	<!-- Dark mode -->
@@ -175,10 +174,9 @@ Header START -->
 					<a class="nav-link btn icon-md p-0" href="#" id="profileDropdown" role="button" data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown" aria-expanded="false">
 						{% if user.userprofile.profile_picture%}
 						<img class="avatar-img rounded-circle" src="{{user.userprofile.profile_picture.url }}" alt="">
-				{% else %}
-				<a href="#"> <img class="avatar-img rounded-circle"
-						src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
-				{% endif %}
+					{% else %}
+						<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> 
+					{% endif %}
 					</a>
 					<ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
 						<!-- Profile info -->
@@ -186,12 +184,11 @@ Header START -->
 							<div class="d-flex align-items-center position-relative">
 								<!-- Avatar -->
 								<div class="avatar me-3">
-									{% if user.userprofile.profile_picture%}
+								{% if user.userprofile.profile_picture%}
 									<img class="avatar-img rounded-circle" src="{{user.userprofile.profile_picture.url }}" alt="">
-							{% else %}
-							<a href="#"> <img class="avatar-img rounded-circle"
-									src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
-							{% endif %}
+								{% else %}
+									<a href="#"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
+								{% endif %}
 								</div>
 								{% if user.is_authenticated %}
 								<div>	
@@ -368,78 +365,93 @@ Header END -->
 				
 				<div class="post-list">
 					{% for post in posts %}
-<div class="card mb-3">
-    <div class="card-body">
-        <div class="d-flex align-items-center">
-            <!-- Avatar -->
-            <div class="avatar me-1">
-                {% if post.user.userprofile.profile_picture %}
-                <img class="avatar-img rounded-circle" src="{{ post.user.userprofile.profile_picture.url }}" alt="">
-                {% else %}
-                <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
-                {% endif %}
-            </div>
-            <!-- Kullanıcı adı -->
-            <div>
-                {% if post.user.is_superuser %}
-                <span class="h6 stretched-link">
-                    <a href="/profile/{{post.user.username}}">{{ post.user.username }} &#x2714;</a>
-                </span>
-                {% else %}
-                <span class="h6 stretched">
-                    <a href="/profile/{{post.user.username}}">{{ post.user.username }} </a>
-                </span>
-                {% endif %}
-            </div>
-        </div>
-        <div style="margin-bottom: 20px;"></div>
-        <!-- Başlık -->
-        <h6 class="card-title">{{ post.title }}</h6>
-        <!-- İçerik -->
-        <p class="small mb-0">{{ post.content }}</p>
-        <!-- Tarih -->
-        <p class="small mb-0">Tarih: {{ post.created_at }}</p>
-        <!-- Resim -->
-        {% if post.image %}
-        <img src="{{ post.image.url }}" alt="Post Image" class="img-fluid mt-3">
-        {% endif %}
-		<br></br>
-        <!-- İstek At Butonu -->
-        <button type="button" class="btn btn-primary-soft" data-bs-toggle="modal" data-bs-target="#istekModal{{ post.id }}">
-            Bağış İsteği At
-        </button>
-    </div>
-</div>
+					<div class="card mb-3">
+						<div class="card-body">
+							<div class="d-flex align-items-center">
+								<!-- Avatar -->
+								<div class="avatar me-1">
+									{% if post.user.userprofile.profile_picture %}
+									<img class="avatar-img rounded-circle" src="{{ post.user.userprofile.profile_picture.url }}" alt="">
+									{% else %}
+									<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+									{% endif %}
+								</div>
+								<!-- Kullanıcı adı -->
+								<div>
+									{% if post.user.is_superuser %}
+									<span class="h6 stretched-link">
+										<a href="/profile/{{post.user.username}}">{{ post.user.username }} &#x2714;</a>
+									</span>
+									{% else %}
+									<span class="h6 stretched">
+										<a href="/profile/{{post.user.username}}">{{ post.user.username }} </a>
+									</span>
+									{% endif %}
+								</div>
+							</div>
+							<div style="margin-bottom: 20px;"></div>
+							<!-- Başlık -->
+							<h6 class="card-title">{{ post.title }}</h6>
+							<!-- İçerik -->
+							<p class="small mb-0">{{ post.content }}</p>
+							<!-- Tarih -->
+							<p class="small mb-0">Tarih: {{ post.created_at }}</p>
+							<!-- Resim -->
+							{% if post.image %}
+							<img src="{{ post.image.url }}" alt="Post Image" class="img-fluid mt-3">
+							{% endif %}
+							<br></br>
+							{% if user.username != post.user.username %}
+							<!-- İstek At Butonu -->
+							<button type="button" class="btn btn-primary-soft" data-bs-toggle="modal" data-bs-target="#istekModal{{ post.id }}">
+								Bağış İsteği At
+							</button>
+							{% else %}
+							<form method="post" action="{% url 'post_action' post.id %}">
+								{% csrf_token %}
+								<input type="hidden" name="action" value="delete">
+								<button type="submit" class="btn btn-primary">Bağışı kaldır</button>
+							</form>
+							<form method="post" action="{% url 'post_action' post.id %}">
+								{% csrf_token %}
+								<input type="hidden" name="action" value="success">
+								<button type="submit" class="btn btn-primary">Bağış Başarılı</button>
+							</form>
+							{% endif %}
 
-<!-- İstek Modalı -->
-<div class="modal fade" id="istekModal{{ post.id }}" tabindex="-1" aria-labelledby="istekModal{{ post.id }}Label" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="istekModal{{ post.id }}Label">Bağış İsteği Gönder</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <!-- İstek Formu -->
-                <form method="post" action="{% url 'bagis_istegi_gonder' post.id %}">
-                    {% csrf_token %}
-                    <!-- İstek Alanı -->
-                    <div class="mb-3">
-                        <label for="istekMesaji" class="form-label">İstek Mesajı</label>
-                        <textarea class="form-control" id="istekMesaji" name="istek_mesaji" rows="3"></textarea>
-                    </div>
-                    <!-- İstek Gönder Butonu -->
-                    <button type="submit" class="btn btn-primary">Gönder</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-{% endfor %}
+						</div>
+						</div>
+
+						<!-- İstek Modalı -->
+						<div class="modal fade" id="istekModal{{ post.id }}" tabindex="-1" aria-labelledby="istekModal{{ post.id }}Label" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="istekModal{{ post.id }}Label">Bağış İsteği Gönder</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										<!-- İstek Formu -->
+										<form method="post" action="{% url 'bagis_istegi_gonder' post.id %}">
+											{% csrf_token %}
+											<!-- İstek Alanı -->
+											<div class="mb-3">
+												<label for="istekMesaji" class="form-label">İstek Mesajı</label>
+												<input type="text" class="form-control pe-4 border-0" name="country" placeholder="İl bilgisi">
+												<input type="text" class="form-control pe-4 border-0" name="city" placeholder="İlçe bilgisi">
+												<input type="text" class="form-control pe-4 border-0" name="district" placeholder="Mahalle bilgisi">
+												<textarea class="form-control" id="istekMesaji" name="istek_mesaji" rows="3"></textarea>
+											</div>
+											<!-- İstek Gönder Butonu -->
+											<button type="submit" class="btn btn-primary">Gönder</button>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+						{% endfor %}
+					</div>
 				</div>
-				
-
-            </div>
             <!-- Main content END -->
             <!-- Right sidebar START -->
             <div class="col-lg-3">
