--- a/account/templates/my-profile.html
+++ b/account/templates/my-profile.html
@@ -113,10 +113,9 @@ Header START -->
 
 			<!-- Main navbar START -->
 			<div class="collapse navbar-collapse" id="navbarCollapse">
-
-
 				<ul class="navbar-nav navbar-nav-scroll ms-auto">
 					<!-- Nav item 2 Pages -->
+          
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sayfalar</a>
 						<ul class="dropdown-menu" aria-labelledby="pagesMenu">
@@ -274,14 +273,12 @@ Header END -->
               <div class="card-footer mt-3 pt-2 pb-0">
                   <!-- Nav profile pages -->
                   <ul class="nav nav-bottom-line align-items-center justify-content-center justify-content-md-start mb-0 border-0">
-                      <li class="nav-item"> <a class="nav-link active" href="my-profile.html"> Gönderileri </a> </li>
-                      <li class="nav-item"> <a class="nav-link" href="my-profile-about.html"> Hakkımda </a> </li>
+                      <li class="nav-item"> <a class="nav-link active" href="#"> Gönderileri </a> </li>
+                      <li class="nav-item"> <a class="nav-link" href='/donations'> Başarılı Bağışlarım </a> </li>
                   </ul>
               </div>
           </div>
-        
           <!-- My profile END -->
-
           <!-- Share feed START -->
           <div class="card card-body">
               <div class="d-flex mb-3">
